mostrando bancas atrasadas

--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -54,7 +54,7 @@
       {% if banca.tipo_de_banca is not None %}
         <b lang="pt">Tipo de Banca:</b>
         <b lang="en">Presentation:</b>
-        {{ banca.tipo_de_banca|get_banca }}
+        {{ banca.tipo_de_banca|get_tipo_banca }}
         <br>
       {% endif %}
 
