mostrando resultados da certificação na tabela

--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -26,8 +26,12 @@
       padding-left: 1.4em;
       font-size: 0.9em;
     }
-    .certificacao_excelencia {background-color:lightgreen;}
-    .certificacao_destaque {background-color:lemonchiffon;}
+    .certificacao_excelencia {
+      background-color:lightgreen !important;
+    }
+    .certificacao_destaque {
+      background-color:lemonchiffon !important;
+    }
   </style>
 {% endblock %}
 
